crates/data-plane-controller/src/shared/snapshots/data_plane_controller__shared__stack__test__simulate_etcd_rollout.snap
---
source: crates/data-plane-controller/src/shared/stack.rs
expression: "&simulate_rollout(&mut stack.config.model, releases)"
---
[
  [
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 3,
      "current": 3,
      "tier": 50
    },
    {
      "role": "gazette",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "r5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "ghcr.io/gazette/broker:v0.100",
      "desired": 9,
      "current": 9,
      "tier": 50
    },
    {
      "role": "reactor",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "r5d.xlarge",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "ghcr.io/estuary/flow:v0.5.11",
      "desired": 7,
      "current": 7,
      "tier": 50
    }
  ],
  [
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 2,
      "current": 3,
      "rollout": {
        "target": 0,
        "step": 1
      },
      "tier": 50
    },
    {
      "role": "gazette",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "r5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "ghcr.io/gazette/broker:v0.100",
      "desired": 9,
      "current": 9,
      "tier": 50
    },
    {
      "role": "reactor",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "r5d.xlarge",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "ghcr.io/estuary/flow:v0.5.11",
      "desired": 7,
      "current": 7,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 0,
      "current": 0,
      "rollout": {
        "target": 3,
        "step": 1
      },
      "tier": 50
    }
  ],
  [
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 1,
      "current": 2,
      "rollout": {
        "target": 0,
        "step": 1
      },
      "tier": 50
    },
    {
      "role": "gazette",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "r5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "ghcr.io/gazette/broker:v0.100",
      "desired": 9,
      "current": 9,
      "tier": 50
    },
    {
      "role": "reactor",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "r5d.xlarge",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "ghcr.io/estuary/flow:v0.5.11",
      "desired": 7,
      "current": 7,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 1,
      "current": 0,
      "rollout": {
        "target": 3,
        "step": 1
      },
      "tier": 50
    }
  ],
  [
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 0,
      "current": 1,
      "rollout": {
        "target": 0,
        "step": 1
      },
      "tier": 50
    },
    {
      "role": "gazette",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "r5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "ghcr.io/gazette/broker:v0.100",
      "desired": 9,
      "current": 9,
      "tier": 50
    },
    {
      "role": "reactor",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "r5d.xlarge",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "ghcr.io/estuary/flow:v0.5.11",
      "desired": 7,
      "current": 7,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 2,
      "current": 1,
      "rollout": {
        "target": 3,
        "step": 1
      },
      "tier": 50
    }
  ],
  [
    {
      "role": "gazette",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "r5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "ghcr.io/gazette/broker:v0.100",
      "desired": 9,
      "current": 9,
      "tier": 50
    },
    {
      "role": "reactor",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "r5d.xlarge",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "ghcr.io/estuary/flow:v0.5.11",
      "desired": 7,
      "current": 7,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 3,
      "current": 2,
      "rollout": {
        "target": 3,
        "step": 1
      },
      "tier": 50
    }
  ],
  [
    {
      "role": "gazette",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "r5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "ghcr.io/gazette/broker:v0.100",
      "desired": 9,
      "current": 9,
      "tier": 50
    },
    {
      "role": "reactor",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "r5d.xlarge",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "ghcr.io/estuary/flow:v0.5.11",
      "desired": 7,
      "current": 7,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 3,
      "current": 3,
      "tier": 50
    }
  ]
]
